--- a/kv/hero_base.kv
+++ b/kv/hero_base.kv
@@ -215,73 +215,73 @@
 
 	"npc_dota_hero_centaur" {
 		"itemBuild" [
-			"item"		"item_magic_wand"
-			"item"		"item_hood_of_defiance"
-			"item"		"item_tranquil_boots"
-			"item"		"item_blink"
-			"item"		"item_pipe"
-			"item"		"item_heart"
-			"item"		"item_shivas_guard"
-			"item"		"item_assault"
-			"item"		"item_radiance"
+			"item_magic_wand"
+			"item_hood_of_defiance"
+			"item_tranquil_boots"
+			"item_blink"
+			"item_pipe"
+			"item_heart"
+			"item_shivas_guard"
+			"item_assault"
+			"item_radiance"
 		]
 		"ultimateUpgrade"		"0"
 	}
 
 	"npc_dota_hero_chaos_knight" {
 		"itemBuild" [
-			"item"		"item_soul_ring"
-			"item"		"item_magic_wand"
-			"item"		"item_power_treads"
-			"item"		"item_armlet"
-			"item"		"item_ancient_janggo"
-			"item"		"item_black_king_bar"
-			"item"		"item_manta"
-			"item"		"item_assault"
-			"item"		"item_heart"
+			"item_soul_ring"
+			"item_magic_wand"
+			"item_power_treads"
+			"item_armlet"
+			"item_ancient_janggo"
+			"item_black_king_bar"
+			"item_manta"
+			"item_assault"
+			"item_heart"
 		]
 		"ultimateUpgrade"		"0"
 	}
 
 	"npc_dota_hero_chen" {
 		"itemBuild" [
-			"item"		"item_ring_of_basilius"
-			"item"		"item_arcane_boots"
-			"item"		"item_mekansm"
-			"item"		"item_ward_observer"
-			"item"		"item_ultimate_scepter"
-			"item"		"item_ancient_janggo"
-			"item"		"item_vladmir"
+			"item_ring_of_basilius"
+			"item_arcane_boots"
+			"item_mekansm"
+			"item_ward_observer"
+			"item_ultimate_scepter"
+			"item_ancient_janggo"
+			"item_vladmir"
 		]
 		"ultimateUpgrade"		"1"
 	}
 
 	"npc_dota_hero_clinkz" {
 		"itemBuild" [
-			"item"		"item_orchid"
-			"item"		"item_magic_wand"
-			"item"		"item_power_treads"
-			"item"		"item_black_king_bar"
-			"item"		"item_monkey_king_bar"
-			"item"		"item_butterfly"
-			"item"		"item_skadi"
+			"item_orchid"
+			"item_magic_wand"
+			"item_power_treads"
+			"item_black_king_bar"
+			"item_monkey_king_bar"
+			"item_butterfly"
+			"item_skadi"
 		]
 		"ultimateUpgrade"		"0"
 	}
 
 	"npc_dota_hero_crystal_maiden" {
 		"itemBuild" [
-			"item"		"item_tranquil_boots"
-			"item"		"item_magic_wand"
-			"item"		"item_bracer"
-			"item"		"item_bracer"
-			"item"		"item_urn_of_shadows"
-			"item"		"item_ancient_janggo"
-			"item"		"item_point_booster"
-			"item"		"item_ultimate_scepter"
-			"item"		"item_ghost"
-			"item"		"item_ward_observer"
-			"item"		"item_smoke_of_deceit"
+			"item_tranquil_boots"
+			"item_magic_wand"
+			"item_bracer"
+			"item_bracer"
+			"item_urn_of_shadows"
+			"item_ancient_janggo"
+			"item_point_booster"
+			"item_ultimate_scepter"
+			"item_ghost"
+			"item_ward_observer"
+			"item_smoke_of_deceit"
 		]
 		"ultimateUpgrade"		"1"
 	}
@@ -300,3 +300,68 @@
 		]
 		"ultimateUpgrade"		"1"
 	}
+
+	"npc_dota_hero_dark_seer" {
+		"itemBuild" [
+			"item_soul_ring"
+			"item_vanguard"
+			"item_arcane_boots"
+			"item_mekansm"
+			"item_cloak"
+			"item_pipe"
+			"item_shivas_guard"
+			"item_ultimate_scepter"
+			"item_sheepstick"
+		]
+		"ultimateUpgrade"		"1"
+	}
+
+	"npc_dota_hero_dazzle" {
+		"itemBuild" [
+			"item_boots"
+			"item_medallion_of_courage"
+			"item_urn_of_shadows"
+			"item_mekansm"
+			"item_arcane_boots"
+			"item_ultimate_scepter"
+			"item_sheepstick"
+			"item_orchid"
+			"item_necronomicon"
+		]
+		"ultimateUpgrade"		"1"
+	}
+
+	"npc_dota_hero_death_prophet" {
+		"itemBuild" [
+			"item_ring_of_basilius"
+			"item_magic_wand"
+			"item_arcane_boots"
+			"item_bloodstone"
+			"item_mekansm"
+			"item_platemail"
+			"item_ancient_janggo"
+			"item_travel_boots"
+			"item_skadi"
+		]
+		"ultimateUpgrade"		"0"
+	}
+
+	"npc_dota_hero_pudge" {
+		"itemBuild" [
+			"item_bottle"
+			"item_magic_wand"
+			"item_urn_of_shadows"
+			"item_boots"
+			"item_hood_of_defiance"
+			"item_ultimate_scepter"
+			"item_pipe"
+			"item_force_staff"
+			"item_travel_boots"
+			"item_ancient_janggo"
+			"item_blade_mail"
+			"item_shivas_guard"
+			"item_heart"
+		]
+		"ultimateUpgrade"		"1"
+	}
+}
