Updated Main.js, and base hero files

--- a/kv/spell_base.kv
+++ b/kv/spell_base.kv
@@ -1,5 +1,56 @@
 "Abilities" {
-	"pudge_dismember" {
-		"ultimateUpgrade"		"1"
-	}
+	"scepter" [
+		"abaddon_borrowed_time"
+		"ancient_apparition_ice_blast"
+		"axe_culling_blade"
+		"bane_fiends_grip"
+		"beastmaster_primal_roar"
+		"brewmaster_primal_split"
+		"chen_hand_of_god"
+		"rattletrap_hookshot"
+		"crystal_maiden_freezing_field"
+		"dark_seer_wall_of_replica"
+		"dazzle_weave"
+		"doom_bringer_doom"
+		"earthshaker_echo_slam"
+		"enchantress_impetus"
+		"faceless_void_chronosphere"
+		"gyrocopter_call_down"
+		"huskar_life_break"
+		"invoker_invoke"
+		"jakiro_macropyre"
+		"juggernaut_omni_slash"
+		"leshrac_pulse_nova"
+		"lich_chain_frost"
+		"lina_laguna_blade"
+		"lion_finger_of_death"
+		"luna_eclipse"
+		"meepo_divided_we_stand"
+		"furion_force_of_nature"
+		"necrolyte_reapers_scythe"
+		"night_stalker_darkness"
+		"ogre_magi_multicast"
+		"omniknight_guardian_angel"
+		"obsidian_destroyer_sanity_eclipse"
+		"puck_dream_coil"
+		"pudge_dismember"
+		"pugna_life_drain"
+		"queenofpain_sonic_wave"
+		"razor_eye_of_the_storm"
+		"rubick_spell_steal"
+		"sandking_epicenter"
+		"shadow_shaman_mass_serpent_ward"
+		"silencer_global_silence"
+		"spirit_breaker_nether_strike"
+		"tiny_grow"
+		"undying_flesh_golem"
+		"vengefulspirit_nether_swap"
+		"venomancer_poison_nova"
+		"viper_viper_strike"
+		"visage_summon_familiars"
+		"warlock_rain_of_chaos"
+		"witch_doctor_death_ward"
+		"windrunner_focusfire"
+		"zuus_thundergods_wrath"
+	]
 }
