--- a/kv/item_component_exclusion_list.kv
+++ b/kv/item_component_exclusion_list.kv
@@ -108,24 +108,28 @@
 		"item_arcane_boots"
 		"item_travel_boots"
 		"item_power_treads"
+		"item_tranquil_boots"
 	]
 
 	"item_arcane_boots" [
 		"item_phase_boots"
 		"item_travel_boots"
 		"item_power_treads"
+		"item_tranquil_boots"
 	]
 
 	"item_travel_boots" [
 		"item_phase_boots"
 		"item_arcane_boots"
 		"item_power_treads"
+		"item_tranquil_boots"
 	]
 
 	"item_power_treads" [
 		"item_arcane_boots"
 		"item_travel_boots"
 		"item_phase_boots"
+		"item_tranquil_boots"
 	]
 
 	"item_mekansm" [
