--- a/kv/item_component_exclusion_list.kv
+++ b/kv/item_component_exclusion_list.kv
@@ -104,6 +104,13 @@
 		"item_yasha"
 	]
 
+	"item_tranquil_boots" [
+		"item_arcane_boots"
+		"item_travel_boots"
+		"item_power_treads"
+		"item_phase_boots"
+	]
+
 	"item_phase_boots" [
 		"item_arcane_boots"
 		"item_travel_boots"
